--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,7 @@ input {
   padding: 0.5rem;
   border: 1px solid #ccc;
   border-radius: 4px;
+  font-size: 16px;
 }
 
 select {
@@ -25,7 +26,7 @@ select {
 }
 
 .currency-selector {
-  margin: 1rem 0;
+  margin: 0 0 1rem 0;
 }
 
 label {
@@ -33,6 +34,7 @@ label {
   margin: 1rem 0 0.5rem;
   font-size: 18px;
   font-weight: bold;
+  color: white;
 }
 
 button {
@@ -40,9 +42,10 @@ button {
   padding: 1rem 3rem;
   border: none;
   border-radius: 4px;
-  background-color: #646cff;
+  background-color: #1d1f40;
   color: white;
   cursor: pointer;
+  font-size: 18px;
 }
 
 .result {
@@ -52,4 +55,5 @@ button {
   border-radius: 4px;
   font-size: 24px;
   background-color: #f9f9f9;
+  font-weight: bold;
 }
